align project content

--- a/index.html
+++ b/index.html
@@ -81,38 +81,96 @@
 
         <main class="main-content">
             <div class="main-left">
-                <div class="projects">
-                    <div class="projects-title"></div>
-                    <article id="project">
-                        <div class="project-title">titel</div>
-                        <div class="project-content">content</div>
-                        <div class="project-options">buttons</div>
-                    </article>
-                    <article id="project">
-                        <div class="project-title">titel</div>
-                        <div class="project-content">content</div>
-                        <div class="project-options">buttons</div>
-                    </article>
-                    <article id="project">
-                        <div class="project-title">titel</div>
-                        <div class="project-content">content</div>
-                        <div class="project-options">buttons</div>
-                    </article>
-                    <article id="project">
-                        <div class="project-title">titel</div>
-                        <div class="project-content">content</div>
-                        <div class="project-options">buttons</div>
-                    </article>
-                    <article id="project">
-                        <div class="project-title">titel</div>
-                        <div class="project-content">content</div>
-                        <div class="project-options">buttons</div>
-                    </article>
-                    <article id="project">
-                        <div class="project-title">titel</div>
-                        <div class="project-content">content</div>
-                        <div class="project-options">buttons</div>
-                    </article>
+                <div class="projects-title"><h3>Your Projects</h3></div>
+                    <div class="projects">
+                        <article id="project">
+                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-content">
+                                <p>
+                                    Ut enim ad minim veniam, quis nostrud exercitation 
+                                    ullamco laboris nisi ut aliquip.
+                                </p>
+                            </div>
+                            <div class="project-options">
+                                <span class="material-symbols-outlined">add_box</span>
+                                <span class="material-symbols-outlined">visibility</span>
+                                <span class="material-symbols-outlined">share</span>
+                            </div>
+                        </article>
+                        <article id="project">
+                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-content">
+                                <p>
+                                    Quisque conubia mi commodo, bibendum viverra purus 
+                                    nisl erat. Sociosqu posuere lorem class, quisque 
+                                    porta condimentum.
+                                </p>
+                            </div>
+                            <div class="project-options">
+                                <span class="material-symbols-outlined">add_box</span>
+                                <span class="material-symbols-outlined">visibility</span>
+                                <span class="material-symbols-outlined">share</span>
+                            </div>
+                        </article>
+                        <article id="project">
+                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-content">
+                                <p>
+                                    Phasellus felis suscipit, bibendum quisque, posuere
+                                    odio tempor euismod gravida ipsum.
+                                </p>
+                            </div>
+                            <div class="project-options">
+                                <span class="material-symbols-outlined">add_box</span>
+                                <span class="material-symbols-outlined">visibility</span>
+                                <span class="material-symbols-outlined">share</span>
+                            </div>
+                        </article>
+                        <article id="project">
+                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-content">
+                                <p>
+                                    Imperdiet quisque cubilia blandit, fusce dapibus egestas
+                                    volutpat mi euismod scelerisque metus inceptos.
+                                </p>
+                            </div>
+                            <div class="project-options">
+                                <span class="material-symbols-outlined">add_box</span>
+                                <span class="material-symbols-outlined">visibility</span>
+                                <span class="material-symbols-outlined">share</span>
+                            </div>
+                        </article>
+                        <article id="project">
+                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-content">
+                                <p>
+                                    Sagittis platea, laoreet egestas habitasse.
+                                    Pretium condimentum taciti, tortor class rutrum et senectus.
+                                    Venenatis erat elit, cubilia sit auctor hac sociosqu.
+                                </p>
+                            </div>
+                            <div class="project-options">
+                                <span class="material-symbols-outlined">add_box</span>
+                                <span class="material-symbols-outlined">visibility</span>
+                                <span class="material-symbols-outlined">share</span>
+                            </div>
+                        </article>
+                        <article id="project">
+                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-content">
+                                <p>
+                                    Condimentum augue torquent, urna habitant, cras consequat
+                                    sit amet aliquet per egestas. Leo orci suspendisse nostra,
+                                    faucibus malesuada maecenas, hac rhoncus tristique turpis
+                                     integer ipsum elementum blandit.
+                                </p>
+                            </div>
+                            <div class="project-options">
+                                <span class="material-symbols-outlined">add_box</span>
+                                <span class="material-symbols-outlined">visibility</span>
+                                <span class="material-symbols-outlined">share</span>
+                            </div>
+                        </article>
                 </div>
             </div>
 
