finish projects layout and styling in the main area

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="projects-title"><h3>Your Projects</h3></div>
                     <div class="projects">
                         <article id="project">
-                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-title"><h3>Project title 1</h3></div>
                             <div class="project-content">
                                 <p>
                                     Ut enim ad minim veniam, quis nostrud exercitation 
@@ -98,7 +98,7 @@
                             </div>
                         </article>
                         <article id="project">
-                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-title"><h3>Project title 2</h3></div>
                             <div class="project-content">
                                 <p>
                                     Quisque conubia mi commodo, bibendum viverra purus 
@@ -113,7 +113,7 @@
                             </div>
                         </article>
                         <article id="project">
-                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-title"><h3>Project title 3</h3></div>
                             <div class="project-content">
                                 <p>
                                     Phasellus felis suscipit, bibendum quisque, posuere
@@ -127,7 +127,7 @@
                             </div>
                         </article>
                         <article id="project">
-                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-title"><h3>Project title 4</h3></div>
                             <div class="project-content">
                                 <p>
                                     Imperdiet quisque cubilia blandit, fusce dapibus egestas
@@ -141,7 +141,7 @@
                             </div>
                         </article>
                         <article id="project">
-                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-title"><h3>Project title 5</h3></div>
                             <div class="project-content">
                                 <p>
                                     Sagittis platea, laoreet egestas habitasse.
@@ -156,7 +156,7 @@
                             </div>
                         </article>
                         <article id="project">
-                            <div class="project-title"><h3>Project title</h3></div>
+                            <div class="project-title"><h3>Project title 6</h3></div>
                             <div class="project-content">
                                 <p>
                                     Condimentum augue torquent, urna habitant, cras consequat
