finish the announcements layout and styling in the main area

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="main-left">
                 <div class="projects-title"><h3>Your Projects</h3></div>
                     <div class="projects">
-                        <article id="project">
+                        <article class="project">
                             <div class="project-title"><h3>Project title 1</h3></div>
                             <div class="project-content">
                                 <p>
@@ -97,7 +97,7 @@
                                 <span class="material-symbols-outlined">share</span>
                             </div>
                         </article>
-                        <article id="project">
+                        <article class="project">
                             <div class="project-title"><h3>Project title 2</h3></div>
                             <div class="project-content">
                                 <p>
@@ -112,7 +112,7 @@
                                 <span class="material-symbols-outlined">share</span>
                             </div>
                         </article>
-                        <article id="project">
+                        <article class="project">
                             <div class="project-title"><h3>Project title 3</h3></div>
                             <div class="project-content">
                                 <p>
@@ -126,7 +126,7 @@
                                 <span class="material-symbols-outlined">share</span>
                             </div>
                         </article>
-                        <article id="project">
+                        <article class="project">
                             <div class="project-title"><h3>Project title 4</h3></div>
                             <div class="project-content">
                                 <p>
@@ -140,7 +140,7 @@
                                 <span class="material-symbols-outlined">share</span>
                             </div>
                         </article>
-                        <article id="project">
+                        <article class="project">
                             <div class="project-title"><h3>Project title 5</h3></div>
                             <div class="project-content">
                                 <p>
@@ -155,14 +155,14 @@
                                 <span class="material-symbols-outlined">share</span>
                             </div>
                         </article>
-                        <article id="project">
+                        <article class="project">
                             <div class="project-title"><h3>Project title 6</h3></div>
                             <div class="project-content">
                                 <p>
                                     Condimentum augue torquent, urna habitant, cras consequat
                                     sit amet aliquet per egestas. Leo orci suspendisse nostra,
                                     faucibus malesuada maecenas, hac rhoncus tristique turpis
-                                     integer ipsum elementum blandit.
+                                    integer ipsum elementum blandit.
                                 </p>
                             </div>
                             <div class="project-options">
@@ -175,7 +175,40 @@
             </div>
 
             <div class="main-right">
-                main-right
+                <div class="project-title"><h3>Announcements</h3></div>
+                    <div class="announcements">
+                        <div class="announcement">
+                            <div class="announcement-title">Announcement 1</div>
+                            <div class="announcement-text">
+                                <p>
+                                    Leo orci suspendisse nostra, hac rhoncus tristique
+                                    integer ipsum elementum blandit.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="announcement">
+                            <div class="announcement-title">Announcement 2</div>
+                            <div class="announcement-text">
+                                <p>
+                                    Leo orci suspendisse nostra, hac rhoncus tristique
+                                    integer ipsum elementum blandit.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="announcement">
+                            <div class="announcement-title">Announcement 3</div>
+                            <div class="announcement-text">
+                                <p>
+                                    Leo orci suspendisse nostra, hac rhoncus tristique
+                                    integer ipsum elementum blandit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                <div class="project-title"><h3>Trending</h3></div>
+                <div class="trending">
+                    test
+                </div>
             </div>
         </main>
     </div>
