finish trending layout and styling in the main area

--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
                     <img src="/img/av1.png" alt="Users avatar">
                 </div>
                 <div class="user-info">
-
                     <div class="user-info-welcome"><p>Hi there,</p></div>
-                    <div class="user-name"><h3>Morgan Oakley (@Morgan)</h3></div>
+                    <div class="user-name"><h3>Morgan Oakley (@morgan)</h3></div>
                 </div>
 
                 <div class="header-bottom-nav">
@@ -176,38 +175,66 @@
 
             <div class="main-right">
                 <div class="project-title"><h3>Announcements</h3></div>
-                    <div class="announcements">
-                        <div class="announcement">
-                            <div class="announcement-title">Announcement 1</div>
-                            <div class="announcement-text">
-                                <p>
-                                    Leo orci suspendisse nostra, hac rhoncus tristique
-                                    integer ipsum elementum blandit.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="announcement">
-                            <div class="announcement-title">Announcement 2</div>
-                            <div class="announcement-text">
-                                <p>
-                                    Leo orci suspendisse nostra, hac rhoncus tristique
-                                    integer ipsum elementum blandit.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="announcement">
-                            <div class="announcement-title">Announcement 3</div>
-                            <div class="announcement-text">
-                                <p>
-                                    Leo orci suspendisse nostra, hac rhoncus tristique
-                                    integer ipsum elementum blandit.
-                                </p>
-                            </div>
+                <div class="announcements">
+                    <div class="announcement">
+                        <div class="announcement-title">Announcement 1</div>
+                        <div class="announcement-text">
+                            <p>
+                                Leo orci suspendisse nostra, hac rhoncus tristique
+                                integer ipsum elementum blandit.
+                            </p>
                         </div>
                     </div>
+                    <div class="announcement">
+                        <div class="announcement-title">Announcement 2</div>
+                        <div class="announcement-text">
+                            <p>
+                                Leo orci suspendisse nostra, hac rhoncus tristique
+                                integer ipsum elementum blandit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="announcement">
+                        <div class="announcement-title">Announcement 3</div>
+                        <div class="announcement-text">
+                            <p>
+                                Leo orci suspendisse nostra, hac rhoncus tristique
+                                integer ipsum elementum blandit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="project-title"><h3>Trending</h3></div>
                 <div class="trending">
-                    test
+                    <div class="user-avatar-small">
+                        <img src="/img/av1.png" alt="Users avatar">
+                    </div>
+                    <div class="user-info">    
+                        <div class="user-info-welcome"><p>@tegan</p></div>
+                        <div class="user-name"><p>World Peace Builder</p></div>
+                    </div>
+                    <div class="user-avatar-small">
+                        <img src="/img/av1.png" alt="Users avatar">
+                    </div>
+                    <div class="user-info">    
+                        <div class="user-info-welcome"><p>@morgan</p></div>
+                        <div class="user-name"><p>Super Cool Project</p></div>
+                    </div>
+                    <div class="user-avatar-small">
+                        <img src="/img/av1.png" alt="Users avatar">
+                    </div>
+                    <div class="user-info">    
+                        <div class="user-info-welcome"><p>@kendall</p></div>
+                        <div class="user-name"><p>Life Changing App</p></div>
+                    </div>
+                    <div class="user-avatar-small">
+                        <img src="/img/av1.png" alt="Users avatar">
+                    </div>
+                    <div class="user-info">    
+                        <div class="user-info-welcome"><p>@alex</p></div>
+                        <div class="user-name"><p>No Traffic Maker</p></div>
+                    </div>
                 </div>
             </div>
         </main>
