change cursor pointer on clickable elements, fine tune layout further

--- a/index.html
+++ b/index.html
@@ -211,28 +211,28 @@
                         <img src="/img/av1.png" alt="Users avatar">
                     </div>
                     <div class="user-info">    
-                        <div class="user-info-welcome"><p>@tegan</p></div>
+                        <div class="trending-user-info"><p>@tegan</p></div>
                         <div class="user-name"><p>World Peace Builder</p></div>
                     </div>
                     <div class="user-avatar-small">
                         <img src="/img/av1.png" alt="Users avatar">
                     </div>
                     <div class="user-info">    
-                        <div class="user-info-welcome"><p>@morgan</p></div>
+                        <div class="trending-user-info"><p>@morgan</p></div>
                         <div class="user-name"><p>Super Cool Project</p></div>
                     </div>
                     <div class="user-avatar-small">
                         <img src="/img/av1.png" alt="Users avatar">
                     </div>
                     <div class="user-info">    
-                        <div class="user-info-welcome"><p>@kendall</p></div>
+                        <div class="trending-user-info"><p>@kendall</p></div>
                         <div class="user-name"><p>Life Changing App</p></div>
                     </div>
                     <div class="user-avatar-small">
                         <img src="/img/av1.png" alt="Users avatar">
                     </div>
                     <div class="user-info">    
-                        <div class="user-info-welcome"><p>@alex</p></div>
+                        <div class="trending-user-info"><p>@alex</p></div>
                         <div class="user-name"><p>No Traffic Maker</p></div>
                     </div>
                 </div>
