finish laout and styling

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="projects-title"><h3>Your Projects</h3></div>
                     <div class="projects">
                         <article class="project">
-                            <div class="project-title"><h3>Project title 1</h3></div>
+                            <div class="project-title"><h3>Super Cool Project</h3></div>
                             <div class="project-content">
                                 <p>
                                     Ut enim ad minim veniam, quis nostrud exercitation 
@@ -97,7 +97,7 @@
                             </div>
                         </article>
                         <article class="project">
-                            <div class="project-title"><h3>Project title 2</h3></div>
+                            <div class="project-title"><h3>Hard Project</h3></div>
                             <div class="project-content">
                                 <p>
                                     Quisque conubia mi commodo, bibendum viverra purus 
@@ -112,7 +112,7 @@
                             </div>
                         </article>
                         <article class="project">
-                            <div class="project-title"><h3>Project title 3</h3></div>
+                            <div class="project-title"><h3>Ad Blocker</h3></div>
                             <div class="project-content">
                                 <p>
                                     Phasellus felis suscipit, bibendum quisque, posuere
@@ -126,7 +126,7 @@
                             </div>
                         </article>
                         <article class="project">
-                            <div class="project-title"><h3>Project title 4</h3></div>
+                            <div class="project-title"><h3>Easy Project</h3></div>
                             <div class="project-content">
                                 <p>
                                     Imperdiet quisque cubilia blandit, fusce dapibus egestas
@@ -140,12 +140,12 @@
                             </div>
                         </article>
                         <article class="project">
-                            <div class="project-title"><h3>Project title 5</h3></div>
+                            <div class="project-title"><h3>Impossilble App</h3></div>
                             <div class="project-content">
                                 <p>
                                     Sagittis platea, laoreet egestas habitasse.
                                     Pretium condimentum taciti, tortor class rutrum et senectus.
-                                    Venenatis erat elit, cubilia sit auctor hac sociosqu.
+                                    Venenatis erat elit..
                                 </p>
                             </div>
                             <div class="project-options">
@@ -155,13 +155,11 @@
                             </div>
                         </article>
                         <article class="project">
-                            <div class="project-title"><h3>Project title 6</h3></div>
+                            <div class="project-title"><h3>Money Maker</h3></div>
                             <div class="project-content">
                                 <p>
                                     Condimentum augue torquent, urna habitant, cras consequat
-                                    sit amet aliquet per egestas. Leo orci suspendisse nostra,
-                                    faucibus malesuada maecenas, hac rhoncus tristique turpis
-                                    integer ipsum elementum blandit.
+                                    sit amet aliquet per egestas. Leo orci suspendisse nostra.
                                 </p>
                             </div>
                             <div class="project-options">
@@ -208,7 +206,7 @@
                 <div class="project-title"><h3>Trending</h3></div>
                 <div class="trending">
                     <div class="user-avatar-small">
-                        <img src="/img/av1.png" alt="Users avatar">
+                        <img src="/img/av2.png" alt="Users avatar">
                     </div>
                     <div class="user-info">    
                         <div class="trending-user-info"><p>@tegan</p></div>
@@ -222,14 +220,14 @@
                         <div class="user-name"><p>Super Cool Project</p></div>
                     </div>
                     <div class="user-avatar-small">
-                        <img src="/img/av1.png" alt="Users avatar">
+                        <img src="/img/av3.png" alt="Users avatar">
                     </div>
                     <div class="user-info">    
                         <div class="trending-user-info"><p>@kendall</p></div>
                         <div class="user-name"><p>Life Changing App</p></div>
                     </div>
                     <div class="user-avatar-small">
-                        <img src="/img/av1.png" alt="Users avatar">
+                        <img src="/img/av4.png" alt="Users avatar">
                     </div>
                     <div class="user-info">    
                         <div class="trending-user-info"><p>@alex</p></div>
