add hover styles to buttons, finish and touch

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                         <div class="announcement-title">Announcement 1</div>
                         <div class="announcement-text">
                             <p>
-                                Leo orci suspendisse nostra, hac rhoncus tristique
-                                integer ipsum elementum blandit.
+                                Pretium condimentum taciti, tortor class rutrum et senectus.
+                                Venenatis erat elit.
                             </p>
                         </div>
                     </div>
@@ -187,8 +187,8 @@
                         <div class="announcement-title">Announcement 2</div>
                         <div class="announcement-text">
                             <p>
-                                Leo orci suspendisse nostra, hac rhoncus tristique
-                                integer ipsum elementum blandit.
+                                Bibendum viverra purus nisl erat sociosqu posuere lorem class,
+                                quisque porta condimentum.
                             </p>
                         </div>
                     </div>
@@ -196,8 +196,8 @@
                         <div class="announcement-title">Announcement 3</div>
                         <div class="announcement-text">
                             <p>
-                                Leo orci suspendisse nostra, hac rhoncus tristique
-                                integer ipsum elementum blandit.
+                                Quisque cubilia blandit, fusce dapibus egestas
+                                volutpat mi euismod scelerisque metus.
                             </p>
                         </div>
                     </div>
